alpm-types/src/version/snapshots/base::invalid_pkgver@case_5.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid character
 | 
 | 1.ß
 |   ^ expected ASCII characters, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   alpm-pkgver: (ß)
   → invalid character
   → expected ASCII characters, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
